<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Andy\'s Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
    <string name="clear">C</string>
    <string name="backspace">&lt;</string>
    <string name="paren">( )</string>
    <string name="decimal">.</string>
    <string name="negate">+/-</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="abs">abs</string>
    <string name="tan">tan</string>
    <string name="power">^</string>
    <string name="log">log</string>
    <string name="sqrt">sqrt</string>
    <string name="pi">π</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
