<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/black"
    tools:context="myapp.example.testapp.app.AdvancedFragment">

    <LinearLayout
        android:layout_marginLeft="0dp"
        android:id="@+id/function_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/functions_row1"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/btn_sin"
                android:text="@string/sin"
                android:onClick="onFunctionButtonClicked"
                >
            </Button>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/btn_power"
                android:text="@string/power"
                android:onClick="onOperationButtonClicked"
                >
            </Button>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/functions_row2"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/btn_cos"
                android:text="@string/cos"
                android:onClick="onFunctionButtonClicked"
                >
            </Button>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/btn_sqrt"
                android:text="@string/sqrt"
                android:onClick="onFunctionButtonClicked"
                >
            </Button>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/functions_row3"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/btn_tan"
                android:text="@string/tan"
                android:onClick="onFunctionButtonClicked"
                >
            </Button>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/btn_log"
                android:text="@string/log"
                android:onClick="onFunctionButtonClicked"
                >
            </Button>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/functions_row4"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/btn_pi"
                android:text="@string/pi"
                android:onClick="onSpecialOperandButtonClicked"
                >
            </Button>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/btn_abs"
                android:text="@string/abs"
                android:onClick="onFunctionButtonClicked"
                >
            </Button>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
