<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/black"
    >
    <Button
        android:layout_marginTop="30dp"
        android:layout_height="100dp"
        android:layout_width="20dp"
        android:onClick="loadAdvancedFragment"
        >
    </Button>
    <LinearLayout
        android:id="@+id/basic_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/basic_topRow"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:layout_marginTop="5pt">
            <Button
                android:textSize="30sp"
                android:background="@color/liteblue"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btn_clear"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:onClick="onClearButtonClicked"
                android:longClickable="false">
            </Button>
            <Button
                android:textSize="30sp"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_divide"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:onClick="onOperationButtonClicked"
                android:longClickable="false">
            </Button>

            <Button
                android:textSize="30sp"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_muliply"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:inputType="numberDecimal"
                android:onClick="onOperationButtonClicked"
                android:longClickable="false">
            </Button>

            <Button
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_backspace"
                android:text="@string/backspace"
                android:onClick="onBackButtonClicked">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/basic_row2"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:layout_marginTop="3pt">
            <Button
                android:textSize="30sp"
                android:background="@color/white"
                android:text="@string/seven"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btn7"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:onClick="onNumberButtonClicked"
                android:longClickable="false">
            </Button>
            <Button
                android:textSize="30sp"
                android:background="@color/white"
                android:text="@string/eight"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:onClick="onNumberButtonClicked"
                android:longClickable="false">
            </Button>
            <Button
                android:textSize="30sp"
                android:background="@color/white"
                android:text="@string/nine"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:inputType="numberDecimal"
                android:onClick="onNumberButtonClicked"
                android:longClickable="false">
            </Button>

            <Button
                android:textSize="30sp"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_minus"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:onClick="onOperationButtonClicked"
                android:longClickable="false">
            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/basic_row3"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:layout_marginTop="3pt">
            <Button
                android:textSize="30sp"
                android:background="@color/white"
                android:text="@string/four"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btn4"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:onClick="onNumberButtonClicked"
                android:longClickable="false">
            </Button>
            <Button
                android:textSize="30sp"
                android:background="@color/white"
                android:text="@string/five"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:onClick="onNumberButtonClicked"
                android:longClickable="false">
            </Button>
            <Button
                android:textSize="30sp"
                android:background="@color/white"
                android:text="@string/six"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:inputType="numberDecimal"
                android:onClick="onNumberButtonClicked"
                android:longClickable="false">
            </Button>

            <Button
                android:textSize="30sp"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btn_plus"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:onClick="onOperationButtonClicked"
                android:longClickable="false">
            </Button>

        </LinearLayout>


        <LinearLayout
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/basic_row4"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:layout_marginTop="3pt">
            <Button
                android:textSize="30sp"
                android:background="@color/white"
                android:text="@string/one"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btn1"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:onClick="onNumberButtonClicked"
                android:longClickable="false">
            </Button>
            <Button
                android:textSize="30sp"
                android:background="@color/white"
                android:text="@string/two"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:onClick="onNumberButtonClicked"
                android:longClickable="false">
            </Button>
            <Button
                android:textSize="30sp"
                android:background="@color/white"
                android:text="@string/three"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:inputType="numberDecimal"
                android:onClick="onNumberButtonClicked"
                android:longClickable="false">
            </Button>
            <Button
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_paren"
                android:longClickable="false"
                android:onClick="onParensButtonClicked"
                android:text="@string/paren"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/basic_bottomRow"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:layout_marginTop="3pt">
            <Button
                android:textSize="30sp"
                android:background="@color/white"
                android:text="@string/zero"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btn0"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:onClick="onNumberButtonClicked"
                android:longClickable="false">
            </Button>
            <Button
                android:textSize="30sp"
                android:background="@color/white"
                android:text="@string/decimal"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_decimal"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:onClick="onNumberButtonClicked"
                android:longClickable="false">
            </Button>
            <Button
                android:textSize="30sp"
                android:background="@color/white"
                android:text="@string/negate"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_negate"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:inputType="numberDecimal"
                android:onClick="onNegateButtonClicked"
                android:longClickable="false">
            </Button>
            <Button
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/orange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_equals"
                android:longClickable="false"
                android:text="@string/equals"
                android:onClick="onEqualsButtonClicked"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>